--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -20,6 +20,7 @@
     <%- include('../partials/footer.ejs') %>
   </div>
   <script src="/js/prism.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
